# StarfieldBattle

./: .clang-format  .gitignore  ArmedSprite.cpp  ArmedSprite.h  CMakeLists.txt  Colors.cpp  Colors.h  DDManager.cpp  DDManager.h  DIManager.cpp  DIManager.h  DXAManager.cpp  DXAManager.h  Engine.h  FXManager.cpp  FXManager.h  GameManager.cpp  GameManager.h  LICENSE  List.cpp  List.h  Main.cpp  Menu.cpp  Menu.h  README.md  RS2.rc  Sprites.cpp  Sprites.h  Starfield Battle.dxw  Starfield Battle.sln  Starfield Battle.vcxproj  Starfield Battle.vcxproj.filters  Starfield.cpp  Starfield.h  The Game.dsp  The Game.dsw  The Game.ncb  The Game.opt  The Game.plg  resource.h
Sounds/: Music.mid
